# AGENTS-PROJECTS

./: README.md  main.py  pyproject.toml
career-conversation-agent/: app.py  config.py  utils.py
career-conversation-agent/me/: summary.txt
crewai/coder/: pyproject.toml
openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  README.md  Some Notes.md
openai/deep_research/: planner_agent.py  research_manager.py  search_agent.py  telegram_agent.py
